[tool.poetry]
name = "GB-FS-Methods"
version = "1.0.0"
description = "Graph-Based Feature Selection Methods"
authors = ["David Levin <david.levin2@live.biu.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
pydantic = "^1.10.9"
pyyaml = "^6.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
scikit-learn-extra = "^0.3.0"
prettytable = "^3.8.0"
kneed = "^0.8.3"
skfeature-chappers = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
